# POP-Voyager

./: README.md  draw_graph.py  example.py  example_experiment.py  example_graph.py  generate_graph.py  genetic_utils.py  graph_types.py  heuristics.py  heuristics_utils.py  objective_function.py  path.py  pyproject.toml  target_function.py  task.md
experiment/: calls.py  runner.py  timer.py
experiment/analize_results/: compare_algs_results.py  random_search_tuning_results.py  reconstruct_graph_and_draw.py  single_param_tuning_results.py
experiment/plots/: tuning_results.py
experiment/results/: aco_diffused_tune_elite.jsonl  aco_diffused_tune_range.jsonl  aco_mode_comparison.jsonl  aco_random_search.jsonl  aco_random_search_tuning.jsonl  aco_tune_alpha_beta.jsonl  aco_tune_ant_count.jsonl  aco_tune_candidates_list_size.jsonl  aco_tune_degradation.jsonl  aco_tune_q_value.jsonl  astar_tune_factory.jsonl  astar_tune_n_children.jsonl  compare_on_archipelago_scenario.jsonl  compare_on_barabasi_100_nodes.jsonl  compare_on_barabasi_100_nodes_extended_path.jsonl  compare_on_barabasi_20_nodes.jsonl  compare_on_barabasi_20_nodes_extended_path.jsonl  compare_on_barabasi_40_nodes.jsonl  (+24 more)
experiments/: experiment.py  result.py  timer.py
graph/: barabasi.py  config.py  draw.py  generate.py  generate_line_circle_trap.py  generate_return_trap.py  params.py
heuristics/: __init__.py  a_star.py  ant_colony.py  genetic.py  greedy.py  random.py  sa.py
models/: graph.py  path.py
raport/: main.tex
utils/: a_star.py  ant_colony.py  common.py  config.py  genetic.py  logger.py  sa.py
(+50 files in other folders)
