[project]
name = "pop-voyager"
version = "0.1.0"
description = "Search and optimization project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = ["ruff>=0.14.4"]

[tool.ruff]
line-length = 100
unsafe-fixes = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "ANN", "B", "C4", "SIM"]

ignore = ["ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["pop-voyager"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
